--- a/package.json
+++ b/package.json
@@ -8,8 +8,28 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "prettier": {
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": false,
+    "printWidth": 120,
+    "quoteProps": "consistent",
+    "arrowParens": "avoid",
+    "singleAttributePerLine": true
+  },
+  "dependencies": {
+    "luxon": "^3.5.0",
+    "sinuous": "^0.32.1"
+  },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
+    "@types/node": "^22.9.0",
+    "prettier": "^3.3.3",
+    "sass": "^1.80.6",
     "typescript": "~5.6.2",
     "vite": "^5.4.10"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.25.0"
   }
 }
